--- a/style.css
+++ b/style.css
@@ -1,36 +1,51 @@
-.calculator{
-    background-color: #1c0606;
-    align-items: center;
-    justify-content: center;
+.body{
     display: grid;
-    flex-direction: row;
+    justify-content: center;
+    background: #000;
+    align-items: center;
     
+}
+
+.text{
+    color: aqua;
 
 }
 
 .input{
-    
-    margin-top: 50px;
+    width: 230px;
+    margin-left: 200px;
+    height: 30px;
 
-    
+}
+
+.calculator{
+    width: 238px;
+    background-color: rgb(55, 62, 67);
+    margin-left: 200px;
+    height: 220px;
+
+
 }
 
 .btn{
-width: 30%;
-width: 40px;
-color: rgb(1, 1, 8);
-font-weight: bolder;
-background-color: rgb(236, 34, 152);
-
-
-    
-}
-.TEXTH{
-    
-    
-background-color: aliceblue;
-
-padding: 10px;
-
+    width: 40px;
+    height: 40px;
+    margin-left: 20px;
+    margin-right: -10px;
+    margin-top: 3px;
+    background-color: chartreuse;
 }
 
+.btn:hover{
+    transform: scale(1.1);
+}
+
+.operator{
+    
+    width: 40px;
+    height: 40px;
+    margin-left: 20px;
+    margin-right: -10px;
+    margin-top: 3px;
+    background-color: chartreuse;
+}
